Fix form header issue on mobile devices

--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -70,6 +70,10 @@ td {
     line-height: normal !important;
 }
 
+.sv_main .sv_header__text {
+    max-width: 100% !important;
+}
+
 .sv_q_imgsel_text,
 .sv_q_imgsel_text span {
     display: block;
